<resources>
    <string name="app_name">TrassTarea</string>
    <string name="main_tv_slogan">Tus tareas, tu ritmo, tu éxito.</string>
    <string name="main_bt_empezar">Empezar</string>
    <string name="main_iv_descripcion">Imagen con el logotipo de la app</string>
    <string name="listado_tv_vacio">No hay tareas disponibles</string>
    <string name="listado_tv_no_prioritarias">No hay tareas prioritarias disponibles</string>
    <string name="elemento_tv_titulo">Título de la Tarea</string>
    <string name="elemento_tv_fecha">dd/mm/aaaa</string>
    <string name="elemento_tv_quedan">Quedan:</string>
    <string name="elemento_tv_ndias">00</string>
    <string name="elemento_tv_dias">días</string>
    <string name="item_acerca_de">Acerca de…</string>
    <string name="item_salir">Salir</string>
    <string name="item_crear_tarea">Crear Tarea</string>
    <string name="item_prioritarias">Prioritarias</string>
    <string name="item_detalle">Detalle</string>
    <string name="item_editar">Editar</string>
    <string name="item_borrar">Borrar</string>
    <string name="item_statistics">Estadísticas</string>
    <string name="tv_crear_tarea">Crear tarea</string>
    <string name="tv_editar_tarea">Editar tarea</string>
    <string name="tv_titulo">Título</string>
    <string name="et_titulo">Título de la tarea</string>
    <string name="tv_fecha_creacion">Fecha creación</string>
    <string name="tv_fecha_objetivo">Fecha objetivo</string>
    <string name="tv_progreso">Progreso</string>
    <string name="cb_prioritaria">Prioritaria</string>
    <string name="bt_siguiente">Siguiente</string>
    <string name="bt_guardar">Guardar</string>
    <string name="bt_volver">Volver</string>
    <string name="bt_cerrar">Cerrar</string>
    <string name="et_descripcion">Descripción</string>
    <string name="msg_salida">Hasta pronto</string>
    <string name="tarea_add">Tarea añadida</string>
    <string name="et_fecha">dd/mm/aaaa</string>
    <string name="about_title">Acerca de…</string>
    <string name="about_msg">José Luis Camuñas\n IES Trassierra\n© 2024\nv.1.0</string>
    <string name="about_ok">Aceptar</string>
    <string name="dialog_confirmacion_titulo">Confirmar borrado</string>
    <string name="dialog_yes">Sí</string>
    <string name="dialog_no">No</string>
    <string name="dialog_msg">¿Confirmas que quieres borrar la tarea </string>
    <string name="dialog_erased">Tarea borrada</string>
    <string name="dialog_not_found">Tarea no encontrada</string>
    <string name="dialog_description">Descripción</string>
    <string name="dialog_close">Cerrar</string>
    <string name="tarea_edit">Tarea editada</string>
    <string name="tarea_no_edit">Tarea no editada</string>
    <string name="tarea_detail">Tarea detallada</string>
    <string name="action_canceled">Acción cancelada</string>
    <string name="bt_cancelar">Cancelar</string>
    <string name="ad_campos_incompletos">Campos incompletos</string>
    <string name="ad_campos_contenido">Complete la información de título y fechas</string>
    <string name="bt_aceptar">Aceptar</string>
    <string name="ad_fechas">Fechas inconsistentes</string>
    <string name="ad_fechas_contenido">La fecha objetivo no puede ser anterior a la fecha de creación</string>
    <string name="title_activity_preferencias">Preferencias</string>
    <string name="cat_visualizacion">Visualización</string>
    <string name="cat_ordenacion">Ordenación</string>
    <string name="cat_almacenamiento">Almacenamiento</string>
    <string name="cat_bd_externa">Base de datos externa</string>
    <string name="pref_tema">Tema de la aplicación</string>
    <string name="pref_tema_oscuro">Oscuro</string>
    <string name="pref_tema_claro">Claro</string>
    <string name="pref_alto_contraste">Alto contraste</string>
    <string name="high_contrast">Cierre las preferencias para aplicar alto contraste</string>
    <string name="pref_letra">Tamaño de la letra</string>
    <string name="item_settings">Preferencias</string>
    <string name="pref_criterio">Criterio de ordenación</string>
    <string name="pref_orden">Orden</string>
    <string name="bt_restablecer">Restablecer preferencias</string>
    <string name="summary_on_orden">Ascendente</string>
    <string name="summary_off_orden">Descendente</string>
    <string name="pref_sd">Almacenamiento en tarjeta SD</string>
    <string name="pref_limpieza">Limpieza de archivos</string>
    <string name="pref_bd">Base de datos</string>
    <string name="pref_nombrebd">Nombre de la base de datos</string>
    <string name="pref_ip">Dirección IP</string>
    <string name="pref_puerto">Puerto</string>
    <string name="pref_usuario">Usuario</string>
    <string name="pref_password">Contraseña</string>
    <string name="detallar_titulo_actividad">Detalle</string>
    <string name="detallar_title">Título</string>
    <string name="detallar_progress">Progreso</string>
    <string name="detallar_remaining">Días restantes</string>
    <string name="detallar_description">Descripción</string>
    <string name="detallar_documento">Documento</string>
    <string name="detallar_imagen">Imagen</string>
    <string name="detallar_audio">Audio</string>
    <string name="detallar_video">Vídeo</string>
    <string name="detalle_no_presente">No presente</string>
    <string name="button_description">Botón para adjuntar un documento</string>
    <string name="tv_estadisticas_tarea">Estadísticas</string>
    <string name="bt_estadisticas_volver">Cerrar</string>
    <string name="tv_estadisticas_cat1">Número de tareas</string>
    <string name="tv_estadisticas_cat2">Número de tareas prioritarias</string>
    <string name="tv_estadisticas_cat3">Progreso medio</string>
    <string name="tv_estadisticas_cat4">Número de tareas que vencen en 1 semana</string>
    <string name="tv_estadisticas_val1">0</string>
    <string name="tv_estadisticas_val2">0</string>
    <string name="tv_estadisticas_val3">0</string>
    <string name="tv_estadisticas_val4">0</string>
    <string name="dialog_pref_title">¡¡Atención!!</string>
    <string name="dialog_pref_msg">Se van a cambiar las preferencias de usuario a sus valores por defecto</string>
    <string name="dialog_pref_confirm">Las preferencias se han restablecido</string>
    <string name="dialog_pref_ok">Cambiar</string>
    <string name="dialog_pref_cancel">Cancelar</string>
    <string name="dialog_f2_sd_not_mounted">La tarjeta SD no está disponible. Almacenamiento interno</string>
    <string name="toast_f2_file_storage">Archivo guardado: </string>
    <string name="toast_f2_error_storage">Error al guardar el archivo: </string>
    <string name="toast_f2_storage_ok">Archivo copiado correctamente</string>
    <string name="tv_f2_not_present">No presente</string>
    <string name="toast_list_no_repository">No ha sido posible conectar con base de datos externa</string>
</resources>