<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="@dimen/cardview_default_radius"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_f1_titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:hint="@string/et_titulo" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="@dimen/cardview_default_radius"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_f1_fecha_creacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="false"
            android:hint="@string/tv_fecha_creacion" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="@dimen/cardview_default_radius"
        app:layout_constraintBottom_toTopOf="@+id/sp_f1_progreso"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_f1_fecha_objetivo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="false"
            android:hint="@string/tv_fecha_objetivo" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_f1_progreso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_progreso"
        app:layout_constraintBottom_toTopOf="@+id/sp_f1_progreso"
        app:layout_constraintStart_toStartOf="@+id/sp_f1_progreso" />

    <Spinner
        android:id="@+id/sp_f1_progreso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/bt_f1_cancelar"
        app:layout_constraintEnd_toStartOf="@+id/cb_f1_prioritaria"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3" />

    <CheckBox
        android:id="@+id/cb_f1_prioritaria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cb_prioritaria"
        app:layout_constraintBottom_toBottomOf="@+id/sp_f1_progreso"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/sp_f1_progreso"
        app:layout_constraintTop_toTopOf="@+id/sp_f1_progreso" />

    <Button
        android:id="@+id/bt_f1_cancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_cancelar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/bt_f1_siguiente"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sp_f1_progreso" />

    <Button
        android:id="@+id/bt_f1_siguiente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_siguiente"
        app:layout_constraintBottom_toBottomOf="@+id/bt_f1_cancelar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bt_f1_cancelar"
        app:layout_constraintTop_toTopOf="@+id/bt_f1_cancelar" />

    <TextView
        android:id="@+id/tv_f1_prioritaria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cb_prioritaria"
        app:layout_constraintBottom_toTopOf="@+id/cb_f1_prioritaria"
        app:layout_constraintStart_toStartOf="@+id/cb_f1_prioritaria" />

</androidx.constraintlayout.widget.ConstraintLayout>