<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/degradado_background"
    tools:context=".actividades.MainActivity">

    <ImageView
        android:id="@+id/iv_main_logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/main_iv_descripcion"
        app:layout_constraintBottom_toTopOf="@+id/bt_main_empezar"
        app:layout_constraintEnd_toEndOf="@+id/tv_main_eslogan"
        app:layout_constraintStart_toStartOf="@+id/tv_main_eslogan"
        app:layout_constraintTop_toBottomOf="@+id/tv_main_eslogan"
        app:srcCompat="@drawable/trasstarea" />

    <TextView
        android:id="@+id/tv_main_eslogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/days_one"
        android:maxWidth="250dp"
        android:maxLines="3"
        android:text="@string/main_tv_slogan"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/iv_main_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_main_empezar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="8dp"
        android:text="@string/main_bt_empezar"
        android:textSize="20sp"
        android:textStyle="bold"
        app:backgroundTint="@color/m3_button_background_color_selector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/iv_main_logo"
        app:layout_constraintStart_toStartOf="@+id/iv_main_logo"
        app:layout_constraintTop_toBottomOf="@+id/iv_main_logo" />

</androidx.constraintlayout.widget.ConstraintLayout>