<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout_f2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragmentos.FragmentoDos">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="@dimen/cardview_default_radius"
        app:layout_constraintBottom_toTopOf="@+id/guideline_f2_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_f2_descripcion"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true"
            android:hint="@string/et_descripcion" />
    </com.google.android.material.textfield.TextInputLayout>


    <LinearLayout
        android:id="@+id/ll_f2_archivos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/bt_f2_volver"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline_f2_horizontal">

        <!-- Primera fila -->
        <LinearLayout
            android:id="@+id/ll_f2_documento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/ib_f2_documento"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:contentDescription="@string/button_description"
                android:src="@drawable/outline_article_24" />

            <TextView
                android:id="@+id/tv_f2_documento"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center_vertical"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/detalle_no_presente" />

        </LinearLayout>

        <!-- Segunda fila -->
        <LinearLayout
            android:id="@+id/ll_f2_imagen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/ib_f2_imagen"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:contentDescription="@string/button_description"
                android:src="@drawable/outline_camera_alt_24" />

            <TextView
                android:id="@+id/tv_f2_imagen"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center_vertical"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/detalle_no_presente" />

        </LinearLayout>

        <!-- Tercera fila -->
        <LinearLayout
            android:id="@+id/ll_f2_audio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/ib_f2_audio"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:contentDescription="@string/button_description"
                android:src="@drawable/outline_audio_file_24" />

            <TextView
                android:id="@+id/tv_f2_audio"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center_vertical"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/detalle_no_presente" />

        </LinearLayout>

        <!-- Cuarta fila -->
        <LinearLayout
            android:id="@+id/ll_f2_video"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/ib_f2_video"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:contentDescription="@string/button_description"
                android:src="@drawable/outline_ondemand_video_24" />

            <TextView
                android:id="@+id/tv_f2_video"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center_vertical"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/detalle_no_presente" />

        </LinearLayout>

    </LinearLayout>


    <Button
        android:id="@+id/bt_f2_volver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_volver"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/bt_f2_guardar"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_f2_archivos" />

    <Button
        android:id="@+id/bt_f2_guardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_guardar"
        app:layout_constraintBottom_toBottomOf="@+id/bt_f2_volver"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bt_f2_volver"
        app:layout_constraintTop_toTopOf="@+id/bt_f2_volver" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_f2_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />

</androidx.constraintlayout.widget.ConstraintLayout>